--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         </div>
         <main>
             <header>
-                <h1>Title</h1>
+                <img src="logo.svg" alt="RizzCode logo"></img>
+                <h1>RizzCode</h1>
             </header>
             <article>
                 <div class="offers">
