--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <h1>RizzCode</h1>
             </header>
             <article>
+                <p>RizzCode is a service by IT-technicians for kids and teenagers to learn how to code.</p>
                 <div class="offers">
                     <a href="#" class="offer offer1">
                         <h3>Basic</h3>
@@ -60,6 +61,8 @@
                         <div href="#" class="button">Enlist</div>
                     </a>
                 </div>
+                <h2>About us</h2>
+                <p>We are RizzCode and this is our team</p>
             </article>
         </main>
     </body>
