Fix layout and add slogan

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="style.css">
         <script src="https://kit.fontawesome.com/5c67c58026.js" crossorigin="anonymous"></script>
         <script src="sidebar.js"></script>
+        <script id="dsq-count-scr" src="//rizzcode.disqus.com/count.js" async></script>
     </head>
     <body>
         <div class="sidebar" id="sidebar">
@@ -31,11 +32,13 @@
         </div>
         <main>
             <header>
-                <img src="logo.svg" alt="RizzCode logo"></img>
-                <h1>RizzCode</h1>
+                <div class="logo-container">
+                    <img src="logo.svg" alt="RizzCode logo">
+                    <h1>RizzCode</h1>
+                </div>
+                <p>Empowering Young Minds to Code the Future</p>
             </header>
             <article>
-                <p>RizzCode is a service by IT-technicians for kids and teenagers to learn how to code.</p>
                 <div class="offers">
                     <a href="#" class="offer offer1">
                         <h3>Basic</h3>
@@ -51,18 +54,19 @@
                         and excellence with our advanced offer,
                         tailored to exceed your every expectation.</p>
                     </a>
-                    <a href="#" class="offer offer3">
+                    <a href="#" class="offer offer3 button">
                         <h3>Premium</h3>
                         <p class="price">$3</p>
                         <p>Unlock a world of limitless
                         possibilities with our premium offer,
                         designed to elevate your experience to
                         unprecedented heights.</p>
-                        <div href="#" class="button">Enlist</div>
                     </a>
                 </div>
-                <h2>About us</h2>
-                <p>We are RizzCode and this is our team</p>
+                <div class="about-us-container">
+                    <h2>About us</h2>
+                    <p>We are RizzCode and this is our team</p>
+                </div>
             </article>
         </main>
     </body>
