Replace placeholder about us text

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <link rel="stylesheet" href="style.css">
         <script src="https://kit.fontawesome.com/5c67c58026.js" crossorigin="anonymous"></script>
         <script src="sidebar.js"></script>
-        <script id="dsq-count-scr" src="//rizzcode.disqus.com/count.js" async></script>
     </head>
     <body>
         <div class="sidebar" id="sidebar">
@@ -65,7 +64,13 @@
                 </div>
                 <div class="about-us-container">
                     <h2>About us</h2>
-                    <p>We are RizzCode and this is our team</p>
+                    <p>RizzCode was established by a group of dedicated IT
+                    professionals who share a common vision: to make coding
+                    accessible, fun, and inspiring for the younger generation.
+                    With years of industry experience and a deep understanding
+                    of the tech world, our team is committed to creating a
+                    supportive and stimulating learning environment where
+                    students can thrive.</p>
                 </div>
             </article>
         </main>
