Add border hover effect on all offers

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
             </header>
             <article>
                 <div class="offers">
-                    <a href="#" class="offer offer1">
+                    <a href="#" class="offer offer1 button">
                         <h3>Basic</h3>
                         <p class="price">99 BTC</p>
                         <p>Unlock your full potential with our
                         comprehensive and empowering solution
                         tailored to your needs.</p>
                     </a>
-                    <a href="#" class="offer offer2">
+                    <a href="#" class="offer offer2 button">
                         <h3>Advanced</h3>
                         <p class="price">eight small rocks</p>
                         <p>Experience the pinnacle of innovation
