Add contact info and TC logo

--- a/index.html
+++ b/index.html
@@ -73,6 +73,14 @@
                     students can thrive.</p>
                 </div>
             </article>
+            <footer>
+                <div class="text-container">
+                    <h2>Contact</h2>
+                    <p>contact@example.com</p>
+                    <p>+46 12 345 67 89</p>
+                </div>
+                <img src="https://app.tcstenungsund.se/themes/tcapp/images/tc-s-trans.svg" width="20em" height="20em">
+            </footer>
         </main>
     </body>
 </html>
