--- a/index.html
+++ b/index.html
@@ -6,6 +6,31 @@
         <link rel="stylesheet" href="style.css">
         <script src="https://kit.fontawesome.com/5c67c58026.js" crossorigin="anonymous"></script>
         <script src="sidebar.js"></script>
+
+        <!-- PWA Manifest & Meta Tags -->
+        <link rel="manifest" href="manifest.json">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="theme-color" content="#1976d2">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <meta name="application-name" content="RizzCode">
+        <link rel="apple-touch-icon" href="icons/icon-192x192.png">
+        <link rel="icon" sizes="192x192" href="icons/icon-192x192.png">
+        <link rel="icon" sizes="512x512" href="icons/icon-512x512.png">
+
+        <!-- Service Worker Registration -->
+        <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', function() {
+                navigator.serviceWorker.register('service-worker.js')
+                .then(function(registration) {
+                    console.log('ServiceWorker registration successful:', registration.scope);
+                }, function(error) {
+                    console.log('ServiceWorker registration failed:', error);
+                });
+            });
+        }
+            </script>
     </head>
     <body>
         <div class="sidebar" id="sidebar">
