--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <meta charset="utf-8">
         <title>RizzCode</title>
         <link rel="stylesheet" href="style.css">
-        <script src="https://kit.fontawesome.com/5c67c58026.js" crossorigin="anonymous"></script>
-        <script src="sidebar.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/5c67c58026.js" crossorigin="anonymous" defer></script>
+        <script src="sidebar.js" defer></script>
 
         <!-- PWA Manifest & Meta Tags -->
         <link rel="manifest" href="manifest.json">
@@ -14,6 +15,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="application-name" content="RizzCode">
+        <meta name="description" content="RizzCode - Empowering young minds to code the future. Unlock your coding potential with our tailored offers and supportive community.">
         <link rel="apple-touch-icon" href="icons/icon-192x192.png">
         <link rel="icon" sizes="192x192" href="icons/icon-192x192.png">
         <link rel="icon" sizes="512x512" href="icons/icon-512x512.png">
@@ -104,7 +106,7 @@
                     <p>contact@example.com</p>
                     <p>+46 12 345 67 89</p>
                 </div>
-                <img src="https://app.tcstenungsund.se/themes/tcapp/images/tc-s-trans.svg" width="20em" height="20em">
+                <img src="https://app.tcstenungsund.se/themes/tcapp/images/tc-s-trans.svg" width="20em" height="20em" alt="tcstenungsund logo">
             </footer>
         </main>
     </body>
