--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
         <meta charset="utf-8">
         <title>RizzCode</title>
         <link rel="stylesheet" href="style.css">
-        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
+<style>
+  body, html {
+    font-family: 'DM Sans', Arial, sans-serif;
+  }
+</style>
         <script src="https://kit.fontawesome.com/5c67c58026.js" crossorigin="anonymous" defer></script>
         <script src="sidebar.js" defer></script>
 
@@ -106,7 +111,7 @@
                     <p>contact@example.com</p>
                     <p>+46 12 345 67 89</p>
                 </div>
-                <img src="https://app.tcstenungsund.se/themes/tcapp/images/tc-s-trans.svg" width="20em" height="20em" alt="tcstenungsund logo">
+                <img src="https://tcstenungsund.github.io/schedule/resources/images/tc-logo.svg" width="20em" height="20em" alt="tcstenungsund logo">
             </footer>
         </main>
     </body>
